--- a/JaumeBalmes_Matias/Practica16/templates/professors.html
+++ b/JaumeBalmes_Matias/Practica16/templates/professors.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professors Template</title>
 </head>
+
 <body>
     {% extends 'index.html' %}
     {% block content %}
-    <h2>Benvinguts a la pàgina Teachers de la app Practica16</h2>
+    <h2 style="margin-top: 10px;">Benvinguts a la pàgina Teachers</h2>
     <p>Dades Professors:</p>
     <ul>
         {% for prof in profs %}
-        <li>Nom: {{prof.name}}</li>
-        <li>Cognom: {{prof.surname}}</li>
-        <li>Edad: {{prof.edad}}</li>
-        </br>
+        <div style="border: solid black 2px; margin: 10px 0;padding: 5px; width: 15%;">
+            <li style="list-style: none;">Nom: {{prof.name}}</li>
+            <li style="list-style: none;">Cognom: {{prof.surname}}</li>
+            <li style="list-style: none;">Edad: {{prof.edad}}</li>
+            </br>
+        </div>
         {% endfor %}
     </ul>
     {% endblock %}
 </body>
+
 </html>
