--- a/JaumeBalmes_Matias/templates/header/header.html
+++ b/JaumeBalmes_Matias/templates/header/header.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'styles/header.css' %}">
     <title>Header</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <div class="img">
+                <img src="../../static/images/libros.png" alt="3 libros">
+            </div>
+            <div class="llista">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Service</a></l>
+                    <li><a href="#">Hire us</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
+
 </html>
