--- a/JaumeBalmes_Matias/templates/index.html
+++ b/JaumeBalmes_Matias/templates/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     {% include "header/header.html" %}
-    <h1>Primer Projecte - app Practica16</h1>
-    <p>Benvinguts a la primera app Practica16</p>
+    <div style="margin: 15px 30px">
+        <h1>Primer Projecte - app Practica16</h1>
+        <p>Benvinguts a la primera app Practica16</p>
 
-    <!-- En aquest block s'hi renderitzaran tots les altres pàgines web -->
-    {% block content %}
+        <!-- En aquest block s'hi renderitzaran tots les altres pàgines web -->
+        {% block content %}
 
-    {% endblock %}
+        {% endblock %}
+    </div>
 
 </body>
 </html>
